# src/docs/swagger.yaml
@@ -116,6 +116,26 @@ paths:
       summary: 登陆接口
       tags:
       - 登陆管理
+  /sso/logout:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: token
+        in: body
+        name: user
+        schema:
+          $ref: '#/definitions/exception.Token'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":0,"data":{},"msg":"success"}'
+          schema:
+            $ref: '#/definitions/handler.Response'
+      summary: 登出接口
+      tags:
+      - 登陆管理
   /sso/role/create:
     post:
       consumes:
